--- a/flip.html
+++ b/flip.html
@@ -1,16 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <link href="css/main.scss" rel="stylesheet">
   </head>
   <body>
-
-    <script src="scripts/flip.js"></script>
-
-<button id="click" type="button">CLICK ME</button>
-<p>
-    You got: <span id="result"></span>
-</p>
-
+    <script src="http://askjared.info/scripts/flip.js"></script>
+    <button id="click" type="button">CLICK ME</button>
+    <p>
+      You got: <span id="result"></span>
+    </p>
   </body>
 </html>
